--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.6",
     "framer-motion": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
@@ -23,6 +24,7 @@
     "react-query": "^3.19.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.0.10",
     "typescript": "^3.9.5",
     "web-vitals": "^0.2.2"
   },
