--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-query": "^3.19.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.4",
     "recharts": "^2.0.10",
     "typescript": "^3.9.5",
     "web-vitals": "^0.2.2"
