--- a/.github/workflows/run-and-upload-tests.yml
+++ b/.github/workflows/run-and-upload-tests.yml
@@ -22,6 +22,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: Install dependencies
+      run: yarn
+
     - name: Run the tests and generate coverage report
       run: yarn run test -- --coverage
 
