--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "dayjs": "^1.10.6",
     "framer-motion": "^4.0.0",
+    "history": "^5.0.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -27,6 +28,7 @@
     "react-scripts": "4.0.3",
     "react-spring": "^9.2.4",
     "recharts": "^2.0.10",
+    "ts-jest": "^27.0.5",
     "typescript": "^3.9.5",
     "web-vitals": "^0.2.2"
   },
@@ -50,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ts-loader": "^9.2.5"
   }
 }
